<resources>
    <string name="app_name">leBar</string>
    <string name="ingreso">Entrar</string>
    <string name="ingresesunumerodecel">Nº de celular</string>
    <string name="bienvenido">¿Qué deseas?</string>
    <string name="cancion">Canción</string>
    <string name="bebidas">Bebidas</string>
    <string name="comidas">Comidas</string>
    <string name="ordenar">Ordenar</string>
    <string name="Artista">Artista</string>
    <string name="Pedir">Pedir!</string>
    <string name="chat">Chat</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo">Correo</string>
    <string name="celular">Celular</string>
    <string name="fecha_nac">Fecha de nacimiento</string>
    <string name="sexo">Sexo</string>
    <string name="preferencia_sexo">Me interesan</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="hombres">Hombres</string>
    <string name="mujeres">Mujeres</string>
    <string name="listo">Listo!</string>
    <string name="contrasenia">Contraseña</string>
    <string name="reg_contrasenia">Una contraseña</string>
    <string name="reg_conf_contrasenia">Confírmala</string>
    <string name="usuario">Usuario</string>
    <string name="estas_en">Estás en</string>

    <string-array name="names_array">

        <item>EDGARDO</item>
        <item>EDITH</item>
        <item>EDMUNDO</item>
        <item>EDUARDO</item>
        <item>EFRAÍN</item>
        <item>EFRÉN</item>
        <item>ELENA</item>
        <item>ELEONOR</item>
        <item>ELÍAS</item>
        <item>ELISA</item>
        <item>ELISABETH</item>
        <item>ELOISA</item>
        <item>ELOY</item>
        <item>ELSA</item>
        <item>ELVIRA</item>
        <item>EMILIA</item>
        <item>EMILIO</item>
        <item>EMA</item>
        <item>EMANUEL</item>
        <item>EMILIO</item>
        <item>ENCARNACIÓN</item>
        <item>ENGRACIA</item>
        <item>ENRIQUE</item>
        <item>ERASMO</item>
        <item>ERICO</item>
        <item>ERIC</item>
        <item>ERICA</item>
        <item>ERNESTO</item>
        <item>ESMERALDA</item>
        <item>ESPERANZA</item>
        <item>ESTEBAN</item>
        <item>ESTEFANÍA</item>
        <item>ESTELA</item>
        <item>ESTER</item>
        <item>ETEL</item>
        <item>EUCLIDES</item>
        <item>EUDOSIA</item>
        <item>EUDOXIO</item>
        <item>EUFEMIO</item>
        <item>EUFEMIA</item>
        <item>EUFRASIO</item>
        <item>EUFRASIA</item>
        <item>EUGENIO</item>
        <item>EUGENIA</item>
        <item>EULALIO</item>
        <item>EULALIA</item>
        <item>EUSEBIO</item>
        <item>EUSTAQUIO</item>
        <item>EVA</item>
        <item>EVANGELINA</item>
        <item>EVARISTO</item>
        <item>EZEQUIEL</item>


    </string-array>

</resources>    