<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    tools:context="co.lebar.lebarv2.ordenar_cancion">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_musica_f"/>

    <EditText
        android:id="@+id/etCancion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/cancion"
        android:inputType="textCapCharacters"
        android:textSize="40sp" />


    <EditText
        android:id="@+id/etArtista"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/Artista"
        android:inputType="textCapCharacters"
        android:textSize="40sp" />


    <Button
        android:id="@+id/btnPedir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:text="@string/listo"
        android:textSize="35sp" />

</LinearLayout>
