<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="co.lebar.lebarv2.ingreso">

    <ImageView
        android:layout_width="300px"
        android:layout_height="300px"
        android:background="@mipmap/ic_launcher_foreground"/>


    <EditText
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/etIng_correo"
        android:hint="@string/correo"
        android:textSize="40dp"
        android:inputType="textEmailAddress"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/etIng_contrasenia"
        android:hint="@string/contrasenia"
        android:textSize="40dp"
        android:inputType="textPassword"/>

    <Button
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ingresarBtn"
        android:text="@string/listo"
        android:textSize="30dp"
        android:background="@null"/>

</LinearLayout>
